# Second-Project

./: CMakeLists.txt
res/Shaders/: fragmentShader.txt  fragment_lampShader.txt  vertexShader.txt  vertex_lampShader.txt
src/: main.cpp
src/buffers/: vbo.cpp  vbo.h
src/camera/: camera.cpp  camera.h
src/render/: ShaderProgram.cpp  ShaderProgram.h  TextureProgram.cpp  TextureProgram.h
src/resources/: ResourceManager.cpp  ResourceManager.h
